material calendarview implemented, not displaying events YET

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="notimeselected">Nie wybrano daty lub czasu wizyty!</string>
     <string name="addedtodatabase">Zapisano wizytę!</string>
     <string name="failed">Błąd zapisu!</string>
+    <string name="wrongPesel">Nieprawidłowy pesel!</string>
+    <string name="noappoint">Brak wizyt!</string>
 </resources>
